Сделал POST-запрос на js и поместил работу с таблицами в один файл
